Update contact email to dev.vernacular@gmail.com and jurisdiction to Delaware, USA

--- a/terms.html
+++ b/terms.html
@@ -152,13 +152,13 @@
         <p>To the maximum extent permitted by law, we are not liable for indirect, incidental, or consequential damages arising from the use of the App.</p>
 
         <h2>11. Governing Law & Dispute Resolution</h2>
-        <p>These Terms are governed by the laws of [Insert Jurisdiction]. Any disputes must be resolved through arbitration or mediation, unless otherwise required by law.</p>
+        <p>These Terms are governed by the laws of Delaware, USA. Any disputes must be resolved through arbitration or mediation, unless otherwise required by law.</p>
 
         <h2>12. Changes to These Terms</h2>
         <p>We may update these Terms at any time. Continued use of Vernacular after updates constitutes acceptance of the new Terms.</p>
 
         <h2>13. Contact Information</h2>
-        <p>For inquiries about these Terms, contact: [Insert Contact Email]</p>
+        <p>For inquiries about these Terms, contact: dev.vernacular@gmail.com</p>
     </main>
 
     <footer>
