--- a/privacy.html
+++ b/privacy.html
@@ -157,7 +157,7 @@
         <h2>6. User Rights & Choices</h2>
         <ul>
             <li>Users cannot currently download their data, but we are working on adding this feature.</li>
-            <li>If you have concerns about your data, you may contact us at [Insert Contact Email].</li>
+            <li>If you have concerns about your data, you may contact us at dev.vernacular@gmail.com.</li>
         </ul>
 
         <h2>7. Children's Privacy</h2>
@@ -167,7 +167,7 @@
         <p>We may update this Privacy Policy at any time. Updates will be posted within the App, and continued use after an update constitutes acceptance of the new terms.</p>
 
         <h2>9. Contact Information</h2>
-        <p>For privacy-related inquiries, contact: [Insert Contact Email]</p>
+        <p>For privacy-related inquiries, contact: dev.vernacular@gmail.com</p>
     </main>
 
     <footer>
