Fix navigation links to use relative paths

--- a/terms.html
+++ b/terms.html
@@ -87,11 +87,11 @@
 <body>
     <header class="nav-header">
         <nav class="container">
-            <a href="/" class="logo">Vernacular</a>
+            <a href="index.html" class="logo">Vernacular</a>
             <div class="nav-links">
-                <a href="/">Home</a>
-                <a href="/#features">Features</a>
-                <a href="/#download">Download</a>
+                <a href="index.html">Home</a>
+                <a href="index.html#features">Features</a>
+                <a href="index.html#download">Download</a>
             </div>
         </nav>
     </header>
@@ -166,13 +166,13 @@
             <div class="footer-content">
                 <div class="footer-logo">Vernacular</div>
                 <div class="footer-links">
-                    <a href="/privacy.html">Privacy Policy</a>
-                    <a href="/terms.html">Terms of Service</a>
-                    <a href="/#contact">Contact</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms of Service</a>
+                    <a href="index.html#contact">Contact</a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Vernacular. All rights reserved.</p>
+                <p>&copy; 2025 Vernacular. All rights reserved.</p>
             </div>
         </div>
     </footer>
