--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <nav class="container">
             <div class="logo">Vernacular</div>
             <div class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#how-it-works">How It Works</a>
-                <a href="#download">Download</a>
+                <a href="index.html">Home</a>
+                <a href="index.html#features">Features</a>
+                <a href="index.html#download">Download</a>
             </div>
         </nav>
     </header>
@@ -139,9 +139,9 @@
             <div class="footer-content">
                 <div class="footer-logo">Vernacular</div>
                 <div class="footer-links">
-                    <a href="/privacy.html">Privacy Policy</a>
-                    <a href="/terms.html">Terms of Service</a>
-                    <a href="#contact">Contact</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms of Service</a>
+                    <a href="index.html#contact">Contact</a>
                 </div>
                 <div class="footer-social">
                     <a href="#" aria-label="Twitter">
