Fix navigation links to work correctly across all pages

--- a/privacy.html
+++ b/privacy.html
@@ -93,11 +93,11 @@
 <body>
     <header class="nav-header">
         <nav class="container">
-            <a href="index.html" class="logo">Vernacular</a>
+            <a href="./" class="logo">Vernacular</a>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="index.html#features">Features</a>
-                <a href="index.html#download">Download</a>
+                <a href="./">Home</a>
+                <a href="./#features">Features</a>
+                <a href="./#download">Download</a>
             </div>
         </nav>
     </header>
@@ -177,7 +177,7 @@
                 <div class="footer-links">
                     <a href="privacy.html">Privacy Policy</a>
                     <a href="terms.html">Terms of Service</a>
-                    <a href="index.html#contact">Contact</a>
+                    <a href="./#contact">Contact</a>
                 </div>
             </div>
             <div class="footer-bottom">
