--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <nav class="container">
             <div class="logo">Vernacular</div>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="index.html#features">Features</a>
-                <a href="index.html#download">Download</a>
+                <a href="./">Home</a>
+                <a href="./#features">Features</a>
+                <a href="./#download">Download</a>
             </div>
         </nav>
     </header>
@@ -141,7 +141,7 @@
                 <div class="footer-links">
                     <a href="privacy.html">Privacy Policy</a>
                     <a href="terms.html">Terms of Service</a>
-                    <a href="index.html#contact">Contact</a>
+                    <a href="./#contact">Contact</a>
                 </div>
                 <div class="footer-social">
                     <a href="#" aria-label="Twitter">
